src/objects/DD_Demo_Pool__c.object
<CustomObject>
    <description>***** Demo Depot Application****
Hold the details of all the demo pool region wise</description>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Demo_Pool_Number__c</fullName>
        <displayFormat>DEMO-POOL-{0000}</displayFormat>
        <label>Demo Pool Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pool_Location_Alternative_Text__c</fullName>
        <label>Pool Location Alternative (Text)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pool_Location__c</fullName>
        <label>Pool Location</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Post_Code_ZIP__c</fullName>
        <label>Post Code/ZIP</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Admin__c</fullName>
        <label>Program Admin</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Demo_Pools</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LATAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <label>State/Province</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <label>Demo Pool</label>
    <listViews>
        <fullName>APAC_Demo_Pools</fullName>
        <columns>Region__c</columns>
        <columns>NAME</columns>
        <columns>Pool_Location__c</columns>
        <columns>Description__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>APAC</value>
        </filters>
        <label>APAC Demo Pools</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>Region__c</columns>
        <columns>NAME</columns>
        <columns>Pool_Location__c</columns>
        <columns>Program_Admin__c</columns>
        <columns>Description__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Demo Pools</label>
    </listViews>
    <listViews>
        <fullName>EMEA_Demo_Pools</fullName>
        <columns>Region__c</columns>
        <columns>NAME</columns>
        <columns>Pool_Location__c</columns>
        <columns>Description__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>EMEA</value>
        </filters>
        <label>EMEA Demo Pools</label>
    </listViews>
    <listViews>
        <fullName>LATAM_Demo_Pools</fullName>
        <columns>Region__c</columns>
        <columns>NAME</columns>
        <columns>Pool_Location__c</columns>
        <columns>Description__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>LATAM</value>
        </filters>
        <label>LATAM Demo Pools</label>
    </listViews>
    <listViews>
        <fullName>NA_Demo_Pools</fullName>
        <columns>Region__c</columns>
        <columns>NAME</columns>
        <columns>Pool_Location__c</columns>
        <columns>Description__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>NA</value>
        </filters>
        <label>NA Demo Pools</label>
    </listViews>
    <nameField>
        <label>Demo Pool Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Demo Pools</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>